# Q-Zip

./: .gitignore  .pnpmfile.cjs  README.md  content.config.ts  eslint.config.mjs  global.d.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
app/: app.vue
app/assets/config/: compressSettingsConfig.json  generalSettingsConfig.json
app/assets/css/: styles.css
app/components/: AccordionComp.vue  BaseModal.vue  BottomButtons.vue  CompressionSectionNew.vue  CustomButton.vue  CustomFieldNew.vue  DropZone.vue  DropdownMenu.vue  FileTable.vue  InfoTooltip.vue  JobArea.vue  JobSelectorArea.vue  JobsSection.vue  ModalContainer.vue  NotificationContainer.vue  NotificationDisplay.vue  PageHeader.vue  ResetButton.vue  TitleBar.vue  ToolBar.vue
app/components/custom-button-comp/: custom-button.scoped.css
app/components/file-table-comp/: file-table.scoped.css
app/components/job-area-comp/: job-area.scoped.css
app/components/job-selector-area-comp/: job-selector-area.scoped.css
app/components/modals/: ResetConfirmationModalContent.vue
app/components/page-components/: PageJobQueue.vue  PageJobSetup.vue  PageProgress.vue
app/composables/: dropdownManager.ts  useResetManager.ts  useScrollContainer.ts
app/layouts/: welcome.vue
app/plugins/: bounceDirective.ts  flashDirective.ts
app/stores/: jobsStore.ts  layoutStore.ts  navigationStore.ts  uiStore.ts
app/types/: modal.ts  pinia.d.ts
app/utils/: appConfig.ts  debugConfig.ts  fileUtils.ts  loggers.ts
assets/config/: advancedSettingsConfig.json  encryptSettingsConfig.json
assets/css/: overlay-scrollbar.css  styles.css
components/: BaseModal.vue  CompressionSectionNew.vue  CustomButton.vue  CustomFieldNew.vue  CustomInput.vue  DropZone.vue  FileTable.vue  JobArea.vue  JobSelectorArea.vue  JobsSection.vue  LockButton.vue  TitleBar.vue
components/compression-section-comp/: compression-section.scoped.css
components/custom-button-comp/: custom-button.global.css
components/custom-field-comp/: custom-field.scoped.css
components/file-table-comp/: file-table.scoped.css
components/job-area-comp/: job-area.scoped.css
components/modals/: DebugButtonTestModalContent.vue  ResetConfirmationModalContent.vue
components/title-bar-comp/: title-bar.scoped.css
layouts/: default.vue
plugins/: flashDirective.ts  pinia-persistence.ts  registerResets.client.ts  themePlugin.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: core-events.json  default.json  fs-all.json
src-tauri/src/: main.rs
stores/: clipboardStore.ts  dragDropStore.ts  jobsStore.ts  modalsStore.ts  themeStore.ts  uiStore.ts  userPreferencesStore.ts
types/: modal.ts  types.ts
utils/: fileUtils.ts  loggers.ts
