# Cargo.toml
[package]
name = "q-zip"
version = "0.1.3"
description = "Q-Zip (Queue-Zip), Batch Process Archive Creation"
authors = ["Neil \"Creepio\" Moore"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "q_zip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Updated to the latest stable version
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# Core Tauri crate updated to the latest stable version
tauri = { version = "2.7.0", features = [] }

# Tauri plugins updated to their latest stable versions for compatibility
tauri-plugin-log = "2.6.0"
tauri-plugin-fs = "2.4.1"
tauri-plugin-decorum = "1.1.1"     # This 3rd-party plugin seems fine, keeping its version
tauri-plugin-dialog = "2.3.1"

# Add tauri-plugin-window-state with target configuration
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
# Updated to the latest stable version
tauri-plugin-window-state = "2.4.0"
